changed image path

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:type" content="object">
     <meta property="og:url" content="https://yednai.com">
     <meta property="og:site_name" content="Yednai – платформа взаємопопомоги під час війни">
-    <meta property="og:image" content="images/android-chrome-512x512.png">
+    <meta property="og:image" content="img/android-chrome-512x512.png">
     <meta property="og:image:width" content="240">
     <meta property="og:image:height" content="240">
     <meta name="twitter:card" content="summary_large_image">
@@ -37,9 +37,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="mask-icon" href="fonts/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="preload" href="img/svg/psycho_help.svg" as="image" type="image/svg+xml">
     <link rel="preload" href="img/svg/banner/stars.svg" as="image" type="image/svg+xml">
