add defer to scripts

--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
-    <link rel="mask-icon" href="fonts/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="mask-icon" href="img/svg/safari-pinned-tab.svg" color="#5bbad5" />
     <link rel="preload" href="img/svg/psycho_help.svg" as="image" type="image/svg+xml" />
     <link rel="preload" href="img/svg/banner/stars.svg" as="image" type="image/svg+xml" />
+    <link rel="preload" href="js/main.min.js" as="script" />
     <link rel="manifest" href="site.webmanifest" />
     <link
       rel="preload"
@@ -205,7 +206,7 @@
                       <div class="caro-icon-box bg-gradient-2nd shad-secondary">
                         <img
                           class="caro-icon"
-                          src="fonts/prepared_psychology.svg"
+                          src="img/svg/prepared_psychology.svg"
                           alt="Іконка: підготовлене професійними психологами"
                           loading="lazy"
                         />
@@ -600,9 +601,9 @@
         </div>
       </div>
     </div>
-    <script async src="js/jquery-3.6.0.min.js"></script>
-    <script async src="js/jquery-validate-1.19.3.min.js"></script>
-    <script async src="js/slick.min.js"></script>
-    <script async src="js/main.min.js"></script>
+    <script defer src="js/jquery-3.6.0.min.js"></script>
+    <script defer src="js/jquery-validate-1.19.3.min.js"></script>
+    <script defer src="js/slick.min.js"></script>
+    <script defer src="js/main.min.js"></script>
   </body>
 </html>
