fix slik behevior

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                   Як зрозуміти свій стан чи стан близької людини?
                 </h2>
                 <p class="brand-sub-title">Ми створили персональне тестування, яке:</p>
-                <ul class="caro --3">
-                  <li class="caro-item">
+                <div class="caro --3">
+                  <div class="caro-item">
                     <article class="caro-inner">
                       <div class="caro-icon-box bg-gradient-2nd shad-secondary">
                         <img
@@ -213,8 +213,8 @@
                       </div>
                       <p class="caro-text fg-primary">Підготовлене професійними психологами</p>
                     </article>
-                  </li>
-                  <li class="caro-item">
+                  </div>
+                  <div class="caro-item">
                     <article class="caro-inner">
                       <div class="caro-icon-box bg-gradient-2nd shad-secondary">
                         <img
@@ -228,8 +228,8 @@
                         Дає можливість виділити точки болю та “прожити” їх разом зі спеціалістом
                       </p>
                     </article>
-                  </li>
-                  <li class="caro-item">
+                  </div>
+                  <div class="caro-item">
                     <article class="caro-inner">
                       <div class="caro-icon-box bg-gradient-2nd shad-secondary">
                         <img
@@ -243,8 +243,8 @@
                         Дає зрозуміти, в яких випадках ви здатні впоратись самотужки
                       </p>
                     </article>
-                  </li>
-                </ul>
+                  </div>
+                </div>
                 <p class="brand-sub-title helps-with-wrapper">
                   <span>Допомагає діагностувати: </span
                   ><span class="brand-sub-span trans-upper">депресію </span
